force-app/main/default/objects/Order_Product_Delete__c/Order_Product_Delete__c.object-meta.xml
<CustomObject>
    <label>Order Product Delete</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Order Product Delete Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Product Deletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>