force-app/main/default/objects/Order_Product_Delete__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Product Deletes</relationshipLabel>
    <relationshipName>Order_Product_Deletes</relationshipName>
    <type>Lookup</type>
</CustomField>