force-app/main/default/objects/Order_Product_Delete__c/fields/Order_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Status__c</fullName>
    <label>Order Item Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>