force-app/main/default/objects/Order_Product_Delete__c/fields/Order_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_ID__c</fullName>
    <label>Order Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>